operator/pkg/gateway-api/testdata/gateway/httproute-invalid-backendref-unknown-kind/input/httproute-invalid-backendref-unknown-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-backend-ref-unknown-kind
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - group: unknownkind.example.com
          kind: NonExistent
          name: infra-backend-v1
          port: 8080
